<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DTS</string>
    <string name="app_fullname">DTS</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="btnStandardRemarks">Standard Remarks</string>
    <string name="btnClearRemarks">Clrear Remarks</string>
    <string name="btnSketch">Sketch</string>
    <string name="btnSaveAndClose">Save &amp; Close</string>
    <string name="btnFloorPlan">Floor Plan</string>
    <string name="btnEditPhoto">Edit Photo</string>
    <string name="btnSelectAll">Select All</string>
    <string name="btnDelete">Delete</string>
    <string name="btnRectify">Rectify</string>
    <string name="btnSave">Save</string>
    <string name="btnHelp">Help</string>
    <string name="server">Server :</string>
    <string name="user_id">User ID :</string>
    <string name="password">Password :</string>
    <string name="msg_title">System Message</string>
    <string name="ok_label">OK</string>
    <string name="about_label">About…</string>
    <string name="quit_label">Quit</string>
    <string name="data_to_device_label">Data to Device</string>
    <string name="data_to_server_label">Data to Server</string>
    <string name="connection_label">Connection</string>
    <string name="help_label">Help</string>
    <string name="sketchpadtool_pen">Pen</string>
    <string name="sketchpadtool_eraser">Eraser</string>
    <string name="sketchpadtool_strokesize">Stroke Size</string>
    <string name="sketchpadtool_eraser_size">Eraser Size</string>
    <string name="sketchpadtool_undo">Undo</string>
    <string name="sketchpadtool_redo">Redo</string>
    <string name="sketchpadtool_reset">Reset</string>
    <string name="sketchpadtool_choose">Choose Picture</string>
    <string name="sketchpadtool_save">Save</string>
    <string name="sketchpadtool_load">Load</string>
    <string name="sketchpadtool_bkcolor">Bk Color</string>
    <string name="sketchpadtool_pencolor">Pen Color</string>
    <string name="sketchpadtool_title">Color Picker</string>
    <string name="sketchpadtool_clear">Clear</string>
    <string name="selectpicture_tip">Please wait while finding media</string>
    <string name="selectpicture_done">Done</string>
    <string name="selectpicture_cancel">Cancel</string>
    <string name="selectpicture_nosdcard">There is no SDCard</string>
    <string name="selectcolor_done">Done</string>
    <string name="selectcolor_cancel">Cancel</string>
    <string name="exit">Exit</string>

</resources>