<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#030303"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lblUserID"
        android:layout_below="@+id/spText"
        android:layout_marginTop="130dp"
        android:text="@string/password"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lblServer"
        android:layout_below="@+id/spText"
        android:layout_marginTop="70dp"
        android:text="@string/user_id"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/my_edittext_style"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/lblPassword"
        android:layout_alignLeft="@+id/txtUserID"
        android:ems="30"
        android:inputType="textPassword"
        android:singleLine="true"
        android:text="" >

    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:layout_below="@+id/spText"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/spServer"
        android:background="@drawable/bg_login"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:layout_alignBaseline="@+id/txtPassword"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="false"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/txtPassword"
        android:background="@drawable/bg_login"
        android:text="@string/exit"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loc"
        android:layout_width="146dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="76dp"
        android:layout_marginRight="480dp"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/txtUserID"
        style="@style/my_edittext_style"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/lblUserID"
        android:layout_alignLeft="@+id/spServer"
        android:text=""
        android:ems="30"
        android:singleLine="true" >
        <requestFocus /> 
        </EditText>

	<EditText
	    android:id="@+id/spServer"
	    style="@style/my_edittext_style"
	    android:layout_width="290dp"
	    android:layout_height="40dp"
	    android:layout_alignLeft="@+id/loc"
	    android:layout_below="@+id/spText"
	    android:layout_marginTop="10dp"
	    android:ems="30"
	    android:singleLine="true"
	    android:text="" >
    	</EditText>
        
    <TextView android:id="@+id/spText"
  			android:layout_width="fill_parent" 
  			android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spText"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/spServer"
        android:text="@string/server"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

</RelativeLayout>